--- a/App/Represent/wear/src/main/res/layout/activity_display.xml
+++ b/App/Represent/wear/src/main/res/layout/activity_display.xml
@@ -1,15 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<android.support.wearable.view.BoxInsetLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#234123"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.jgraycar.represent.DisplaySenatorActivity"
-    tools:deviceIds="wear">
+    android:layout_width="match_parent"
+    android:padding="15dp">
 
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello" />
-</LinearLayout>
+    <FrameLayout
+        android:id="@+id/frame_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_box="bottom">
+
+    </FrameLayout>
+</android.support.wearable.view.BoxInsetLayout>
