--- a/App/Represent/mobile/src/main/res/layout/senator_card_view.xml
+++ b/App/Represent/mobile/src/main/res/layout/senator_card_view.xml
@@ -19,6 +19,7 @@
             android:layout_width="100dp"
             android:layout_height="155dp"
             android:id="@+id/senator_photo"
+            android:scaleType="centerCrop"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginEnd="16dp"
@@ -39,6 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
             android:id="@+id/senator_term"
+            android:textSize="14sp"
             android:layout_toEndOf="@+id/senator_photo"
             android:layout_below="@+id/senator_name"
             />
