--- a/App/Represent/mobile/src/main/res/values/colors.xml
+++ b/App/Represent/mobile/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#199AC4</color>
     <color name="colorAccent">#FF4081</color>
     <color name="linkColor">#2F80ED</color>
+    <color name="buttonColor">#009688</color>
     <color name="black_overlay">#66000000</color>
 </resources>
