--- a/App/Represent/wear/src/main/res/layout/activity_display.xml
+++ b/App/Represent/wear/src/main/res/layout/activity_display.xml
@@ -1,16 +1,19 @@
 <android.support.wearable.view.BoxInsetLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#234123"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:padding="15dp">
+    >
 
-    <FrameLayout
-        android:id="@+id/frame_layout"
+    <android.support.wearable.view.GridViewPager
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_box="bottom">
+        android:layout_height="match_parent" />
 
-    </FrameLayout>
+    <android.support.wearable.view.DotsPageIndicator
+        android:id="@+id/indicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|bottom"/>
 </android.support.wearable.view.BoxInsetLayout>
