--- a/App/Represent/mobile/src/main/res/layout/senator_card_view.xml
+++ b/App/Represent/mobile/src/main/res/layout/senator_card_view.xml
@@ -19,6 +19,7 @@
             android:layout_width="100dp"
             android:layout_height="155dp"
             android:id="@+id/senator_photo"
+            android:onClick="goToDetailsView"
             android:scaleType="centerCrop"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
@@ -141,7 +142,8 @@
                 android:textSize="14sp"
                 android:minHeight="20dp"
                 android:text="MORE INFO"
-                android:id="@+id/button"
+                android:id="@+id/detailsButton"
+                android:onClick="goToDetailsView"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_below="@+id/senator_tweet"
                 android:layout_alignParentEnd="true" />
