--- a/App/Represent/wear/src/main/res/layout/fragment_election.xml
+++ b/App/Represent/wear/src/main/res/layout/fragment_election.xml
@@ -25,9 +25,70 @@
             android:layout_height="wrap_content"
             android:id="@+id/districtTextView"
             android:text="District"
+            android:textSize="15dp"
             android:textColor="#000"
             android:layout_below="@+id/yearTextView"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp" />
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_below="@+id/districtTextView"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/obamaLayout">
+
+            <ImageView
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:id="@+id/obamaFace"
+                android:src="@drawable/obama"
+                android:layout_marginRight="20dp"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/obamaVotes"
+                android:text="100%"
+                android:textColor="@color/democrat"
+                android:textSize="25sp"
+                android:layout_below="@+id/yearTextView"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_below="@+id/obamaLayout"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/romneyLayout">
+
+            <ImageView
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_marginRight="20dp"
+                android:id="@+id/romneyFace"
+                android:src="@drawable/romney"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/romneyVotes"
+                android:text="0%"
+                android:textColor="@color/republican"
+                android:textSize="25sp"
+                android:layout_below="@+id/yearTextView"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp" />
+
+        </LinearLayout>
+
     </RelativeLayout>
 </android.support.wearable.view.BoxInsetLayout>
