--- a/App/Represent/mobile/src/main/res/layout/senator_card_view.xml
+++ b/App/Represent/mobile/src/main/res/layout/senator_card_view.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="16dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="6dp"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
     android:id="@+id/cv"
