Functional tweets and location getting

--- a/App/Represent/mobile/src/main/res/layout/content_senator_details.xml
+++ b/App/Represent/mobile/src/main/res/layout/content_senator_details.xml
@@ -6,10 +6,11 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.jgraycar.represent.SenatorDetailsActivity"
-    android:layout_margin="@dimen/activity_horizontal_margin"
     tools:showIn="@layout/activity_senator_details">
 
     <LinearLayout
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -19,6 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1970 - 2016"
+            android:paddingTop="16dp"
             android:id="@+id/senator_term"
             android:textSize="20dp"
             />
