--- a/App/Represent/mobile/src/main/res/layout/content_senator_details.xml
+++ b/App/Represent/mobile/src/main/res/layout/content_senator_details.xml
@@ -30,6 +30,7 @@
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
             android:textColor="#000"
             android:text="Current Committees"
             />
@@ -45,6 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
             android:textColor="#000"
             android:textSize="25sp"
             android:text="Supported Bills"
